--- a/css/main.css
+++ b/css/main.css
@@ -11,9 +11,10 @@ footer {
     margin-top: 15px;
 }
 .card-hotel{
-    flex: 1 170px;
-    padding: 6px 6px 2px 6px;
+    flex: 1 200px;
 }
 .btn-reserva{
     width: 100%;
+    border-radius: 0px;
 }
+
