--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 .jumbotron {
-  background-color: #fffa19;
+  background-color: #FFAAFF;
   color: black;
   margin-top: 50px;
   margin-bottom: 0px; }
 
 footer {
   padding: 10px 10px 0 10px;
-  background-color: #fffa19;
+  background-color: #FFAAFF;
   margin-top: 10px;
   margin-bottom: 0px; }
 
